# calendar-backend

./: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile.am  autogen.sh  calendar-backend.pc.in  configure.ac
caltest/: CaltestMain.cpp  Invalid.ics  Invalid1.ics  Makefile.am  README  calarm.cpp  cattendee.cpp  cbday.cpp  ccalendar.cpp  ccalendardb.cpp  ccomponent.cpp  ccomponentdetails.cpp  cevent.cpp  cicalconverter.cpp  cjournal.cpp  cmulticalendar.cpp  corganizer.cpp  cparameters.cpp  cparticipant.cpp  cproperties.cpp  crecurrence.cpp  crecurrencerule.cpp  ctimezone.cpp  ctodo.cpp  cutility.cpp  dbprocs.cpp  execute-ctimezone.sh  execute-tests.sh  ical.ics  ical2.ics  ical3.ics  ical4.ics  importProg.ics  importProg1.ics  importProg2.ics  test_CAlarm.cpp  test_CAlarm.h  test_CAttendee.cpp  test_CAttendee.h  test_CBday.cpp  (+45 more)
debian/: calendar-backend-dev.install  changelog  control  copyright  rules
docs/: Doxyfile  Makefile.am
include/: CAlarm.h  CAlarmIface.h  CAttendee.h  CBdayEvent.h  CCache.h  CCalendar.h  CCalendarDB.h  CCalendarProcs.h  CComponent.h  CComponentDetails.h  CEvent.h  CJournal.h  CMulticalendar.h  COrganizer.h  CParameters.h  CParticipant.h  CProperties.h  CRecurrence.h  CRecurrenceRule.h  CTimezone.h  CTodo.h  CUtility.h  CalInterface.h  CalendarErrors.h  CalendarLog.h  Common.h  DbCalls.h  ICalConverter.h  Makefile.am  VCalConverter.h
src/: CAlarm.cpp  CAlarmIface.cpp  CAttendee.cpp  CBdayEvent.cpp  CCache.cpp  CCalendar.cpp  CCalendarDB.cpp  CCalendarProcs.cpp  CComponent.cpp  CComponentDetails.cpp  CEvent.cpp  CJournal.cpp  CMulticalendar.cpp  COrganizer.cpp  CParameters.cpp  CParticipant.cpp  CProperties.cpp  CRecurrence.cpp  CRecurrenceRule.cpp  CTimezone.cpp  CTodo.cpp  CUtility.cpp  ICalConverter.cpp  Makefile.am  VCalConverter.cpp
tools/: ChangeTimeZone.cpp  ConfigureTimeZone.cpp  IcalNexttime.cpp  Makefile.am  TimeDiff.cpp  Tzone.cpp  astylerc  calendar-tool.cpp  dbus-listen.c  import-tool.cpp  perf-tool.cpp
