INCLUDES = $(PACKAGE_CFLAGS) -fprofile-arcs -ftest-coverage -fexceptions -I../include -I/usr/include/clockd
LDADD = $(PACKAGE_LIBS) -lsqlite3  -lgcov -lcppunit -ltime

check_PROGRAMS = caltest cutility ccalendardb ccalendar  cmulticalendar ccomponent ccomponentdetails cevent ctodo cjournal corganizer cattendee cparticipant crecurrence cbday cicalconverter calarm cvcalconverter crecurrencerule cparameters cproperties ctimezone dbprocs

caltest_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CTimezone.cpp \
    ../src/CCalendarProcs.cpp \
    test_CUtility.cpp test_CUtility.h\
    test_CRecurrenceRule.cpp test_CRecurrenceRule.h\
    test_CRecurrence.cpp test_CRecurrence.h \
    test_CBday.cpp test_CBday.h \
    test_CCalendar.cpp test_CCalendar.h \
    test_MultiCalendar.cpp test_MultiCalendar.h \
    test_CEvent.cpp test_CEvent.h \
    test_CJournal.cpp test_CJournal.h \
    test_CParticipant.cpp  test_CParticipant.h \
    test_COrganizer.cpp test_COrganizer.h \
    test_CComponent.cpp test_CComponent.h \
    test_ComponentDetails.cpp  test_ComponentDetails.h \
    test_CAttendee.cpp test_CAttendee.h \
    test_CTodo.cpp  test_CTodo.h \
    test_CCalendardb.cpp test_CCalendardb.h \
    test_CalendarAlarms.cpp test_CalendarAlarms.h \
    test_ICalConverter.cpp test_ICalConverter.h \
    test_VCalConverter.cpp test_VCalConverter.h \
    test_CAlarm.cpp test_CAlarm.h \
    test_CProperties.cpp test_CProperties.h \
    test_CParameters.cpp test_CParameters.h \
    test_CTimezone.cpp test_CTimezone.h \
    CaltestMain.cpp

cutility_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CUtility.cpp test_CUtility.h \
    cutility.cpp

ccalendardb_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CCalendardb.cpp test_CCalendardb.h \
    ccalendardb.cpp

ccalendar_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CCalendar.cpp test_CCalendar.h \
    ccalendar.cpp

cmulticalendar_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CTimezone.cpp \
    ../src/CCalendarProcs.cpp \
    test_MultiCalendar.cpp test_MultiCalendar.h \
    cmulticalendar.cpp

ccomponent_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CComponent.cpp test_CComponent.h \
    ccomponent.cpp

ccomponentdetails_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_ComponentDetails.cpp test_ComponentDetails.h \ \
    ccomponentdetails.cpp

cevent_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CEvent.cpp test_CEvent.h \
    cevent.cpp

ctodo_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CTodo.cpp test_CTodo.h \
    ctodo.cpp

cjournal_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CJournal.cpp test_CJournal.h \
    cjournal.cpp

corganizer_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_COrganizer.cpp test_COrganizer.h \
    corganizer.cpp

cattendee_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CAttendee.cpp test_CAttendee.h \
    cattendee.cpp

cparticipant_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp\
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CParticipant.cpp test_CParticipant.h \
    cparticipant.cpp

crecurrence_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CRecurrence.cpp test_CRecurrence.h \
    crecurrence.cpp

cbday_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CBday.cpp test_CBday.h \
    cbday.cpp

cicalconverter_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_ICalConverter.cpp test_ICalConverter.h \
    cicalconverter.cpp

cvcalconverter_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_VCalConverter.cpp test_VCalConverter.h \
    vcalconvertermain.cpp

calarm_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CTimezone.cpp \
    ../src/CCalendarProcs.cpp \
    test_CAlarm.cpp test_CAlarm.h \
    calarm.cpp

crecurrencerule_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CRecurrenceRule.cpp test_CRecurrenceRule.h\
    crecurrencerule.cpp	

cproperties_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CProperties.cpp test_CProperties.h \
    cproperties.cpp

cparameters_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CCalendarProcs.cpp \
    ../src/CTimezone.cpp \
    test_CParameters.cpp test_CParameters.h \
    cparameters.cpp

ctimezone_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CTimezone.cpp \
    ../src/CCalendarProcs.cpp \
    test_CTimezone.cpp test_CTimezone.h \
    ctimezone.cpp

dbprocs_SOURCES = \
    ../src/CCalendarDB.cpp \
    ../src/CCalendar.cpp \
    ../src/CMulticalendar.cpp \
    ../src/CComponent.cpp \
    ../src/CComponentDetails.cpp \
    ../src/CEvent.cpp \
    ../src/CTodo.cpp \
    ../src/CJournal.cpp \
    ../src/COrganizer.cpp \
    ../src/CAttendee.cpp \
    ../src/CParticipant.cpp\
    ../src/CRecurrence.cpp\
    ../src/CAlarm.cpp\
    ../src/CRecurrenceRule.cpp\
    ../src/CBdayEvent.cpp \
    ../src/ICalConverter.cpp \
    ../src/VCalConverter.cpp \
    ../src/CParameters.cpp \
    ../src/CProperties.cpp \
    ../src/CAlarmIface.cpp \
    ../src/CUtility.cpp \
    ../src/CCache.cpp \
    ../src/CTimezone.cpp \
    ../src/CCalendarProcs.cpp \
    test_CCalendarProcs.cpp \
    dbprocs.cpp

dbprocs_CXXFLAGS=-g -O0

clean-local:
	rm -rf *.gcno *.gcda Caltest.xml *.gcov *~
