includedir = \
    @includedir@/calendar-backend

include_HEADERS = \
    CCalendarDB.h \
    CCalendarProcs.h \
    CCalendar.h \
    CComponent.h \
    CComponentDetails.h \
    CEvent.h \
    CTodo.h \
    CJournal.h \
    COrganizer.h \
    CAttendee.h \
    CParticipant.h \
    Common.h \
    CMulticalendar.h \
    CRecurrence.h \
    CalendarLog.h \
    CAlarm.h \
    CAlarmIface.h \
    CRecurrenceRule.h\
    CBdayEvent.h \
    ICalConverter.h\
    VCalConverter.h\
    CProperties.h\
    CalendarErrors.h\
    CParameters.h\
    CUtility.h\
    DbCalls.h\
    CCache.h\
    CalInterface.h \
    CTimezone.h
